# sr5sim

./: +  .gitignore  CMakeLists.txt  Makefile  TODO.txt  build.sh
clingTest/: Character.cpp  Character.h  ClingTest.ipynb  Rectangle.cpp  a.out  main.cpp
clingTest/.ipynb_checkpoints/: ClingTest-checkpoint.ipynb
src/: .character.cpp.swp  .debug.cpp.swp  CMakeLists.txt  character.cpp  character.h  debug.cpp  debug.h  dice.cpp  dice.h  improvement.cpp  improvement.h  load.cpp  load.h  main.cpp  rng.cpp  rng.h  sim.cpp  sim.h  sr5.h  utils.cpp  utils.h  weapon.cpp  weapon.h
src/matrix/: TODO  commlink.cpp  commlink.h  element.cpp  element.h  file.cpp  file.h  hackable.h  icon.h  persona.h
test/: .test.chum5.swp  CMakeLists.txt  battle.test.cpp  dmg.test.cpp  load.test.cpp  rng.test.cpp  sim.test.cpp  sr5.test.cpp  test.chum5  test.test.cpp
testtest/: Rectangle.h
